[gd_scene load_steps=2 format=3 uid="uid://cisoc3y2otam5"]

[ext_resource type="Script" path="res://Scripts/RoomEvents/lights_out.gd" id="1_3nxgi"]

[node name="LightsOut" type="Node2D"]
script = ExtResource("1_3nxgi")

[node name="Duration" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="LightTorch" type="Timer" parent="."]
wait_time = 0.75

[node name="TopLeft" type="Marker2D" parent="."]
position = Vector2(-20, -20)

[node name="TopRight" type="Marker2D" parent="."]
position = Vector2(20, -20)

[node name="BottomRight" type="Marker2D" parent="."]
position = Vector2(20, 20)

[node name="BottomLeft" type="Marker2D" parent="."]
position = Vector2(-20, 20)

[connection signal="finish" from="." to="." method="_on_finish"]
[connection signal="success" from="." to="." method="_on_success"]
